# realtime-examples

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
3d_avatar_chatbot/backend/: chatbot.py
3d_avatar_chatbot/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
3d_avatar_chatbot/frontend/public/: audioProcessor.js
3d_avatar_chatbot/frontend/src/: App.jsx  BrowserNotSupported.jsx  ConnectionStatusOverlay.jsx  Input.jsx  MainLayout.jsx  context.jsx  index.css  index.module.css  main.jsx
chat_embed/: README.md  WidgetIframe.js
lip_sync/: message_1.json  server.py  test.py  test1.py
mascot_chatbot/backend/: chatbot.py
mascot_chatbot/frontend/: README.md  package.json  pnpm-lock.yaml
multimodal_ai_demos/: README.md
multimodal_ai_demos/backend/: README.md  cooking_assistant.py  poker_commentator.py  voice_bot.py
multimodal_ai_demos/frontend/: README.md  env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
object_detection/backend/: app.py  navy_object_detector.py
object_detection/frontend/: package-lock.json  package.json  pnpm-lock.yaml
ocr/: key.py
ocr/backend/: ocr.py  replay_bot.py
ocr/frontend/: package-lock.json  package.json  pnpm-lock.yaml
test_scripts/: app_copy.py  client.py  replay_bot.py  speech_synthesis.py  vad.py
video/: cli.py  video.py
video_surveillance/backend/: app.py
video_surveillance/frontend/: index.html  package.json  pnpm-lock.yaml
voice_bot/frontend/: README.md  env.example  index.html  package.json  pnpm-lock.yaml
(+61 files in other folders)
